--- a/src/main/webapp/pages/CXCodeSets/CXCodeSets.html
+++ b/src/main/webapp/pages/CXCodeSets/CXCodeSets.html
@@ -1,4 +1,4 @@
-<wm-page data-ng-controller="CXCodeSetsPageController" pagetitle="Cx Code Sets" name="page1">
+<wm-page data-ng-controller="CXCodeSetsPageController" pagetitle="CX Code Sets" name="page1">
     <wm-header content="header" name="header1"></wm-header>
     <wm-top-nav content="topnav" name="top_nav1"></wm-top-nav>
     <wm-content name="content1">
@@ -13,22 +13,21 @@
                 <wm-gridrow name="gridrow1">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn1">
                         <wm-livegrid formlayout="dialog" name="livegridCodeSets">
-                            <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.lvCodeSetsData.dataSet" navigation="Classic" name="gridCodeSets">
-                                <wm-grid-column binding="codeSetTitle" caption="Code Set Title" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                <wm-grid-column binding="created" caption="Created" type="datetime" generator="assigned" readonly="true" datepattern="MM-dd-yyyy hh:mm a" formatpattern="toDate" edit-widget-type="datetime" show="true"></wm-grid-column>
-                                <wm-grid-column binding="usersByCreatedBy.fullName" caption="Full Name" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="Users"></wm-grid-column>
+                            <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.lvCodeSetsData.dataSet" navigation="Classic" name="gridCodeSets" filtermode="multicolumn" showrecordcount="true" exportformat="EXCEL">
+                                <wm-grid-column binding="codeSetTitle" caption="Code Set" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                <wm-grid-column binding="usersByCreatedBy.fullName" caption="Created By" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="Users"></wm-grid-column>
+                                <wm-grid-column binding="created" caption="Date Created" type="datetime" generator="assigned" readonly="true" datepattern="MM-dd-yyyy" formatpattern="toDate" edit-widget-type="datetime" show="true" filterwidget="date"></wm-grid-column>
                                 <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
-                                <wm-grid-action key="addNewRow" display-name="New" show="true" class="btn-primary" iconclass="wi wi-plus" title="New" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
+                                <wm-grid-action key="addNewRow" display-name="New Code Set" show="true" class="btn-primary" iconclass="wi wi-plus" title="New Code Set" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
+                                <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-playlist-add" title="Manage Code List" action="Variables.goToPage_CXCodeList.invoke()" disabled="false"></wm-grid-row-action>
                                 <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="editRow()" disabled="false"></wm-grid-row-action>
                                 <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
-                                <wm-grid-row-action key="customRow" display-name="" title="manageCodeList" value="" iconclass="wi wi-playlist-add" class="btn-transparent" show="true" action="Variables.goToPage_CXCodeList.invoke()"
-                                icon="wi wi-playlist-add"></wm-grid-row-action>
                             </wm-grid>
-                            <wm-liveform novalidate="false" errormessage="" title="CodeSets" formlayout="dialog" iconclass="wi wi-edit" dataset="bind:Variables.lvCodeSetsData.dataSet" captionalign="left" captionposition="top" name="liveformCodeSets">
+                            <wm-liveform novalidate="false" errormessage="" title="Code Set Details" formlayout="dialog" iconclass="wi wi-hammer" dataset="bind:Variables.lvCodeSetsData.dataSet" captionalign="left" captionposition="top" name="liveformCodeSets">
                                 <wm-layoutgrid columns="1" name="layoutgrid3">
                                     <wm-gridrow name="gridrow14">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn14">
-                                            <wm-form-field name="codeSetTitle" displayname="Code Set Title" required="false" show="true" generator="assigned" primary-key="false" key="codeSetTitle" type="string" is-related="false" maxchars="255" pc-display="true"
+                                            <wm-form-field name="codeSetTitle" displayname="Code Set Name" required="true" show="true" generator="assigned" primary-key="false" key="codeSetTitle" type="string" is-related="false" maxchars="255" pc-display="true"
                                             mobile-display="true" widget="text"></wm-form-field>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
@@ -47,8 +46,8 @@
                                 </wm-layoutgrid>
                                 <wm-form-field name="codeSetId" displayname="Code Set Id" required="true" show="false" generator="identity" primary-key="true" key="codeSetId" type="integer" is-related="false" step="0" pc-display="true" mobile-display="true"
                                 widget="number"></wm-form-field>
+                                <wm-form-action key="save" class="form-save btn-primary" iconclass="wi wi-save" display-name="Save" show="true" type="submit" update-mode="true"></wm-form-action>
                                 <wm-form-action key="cancel" class="form-cancel btn-secondary" iconclass="wi wi-cancel" action="cancel()" display-name="Cancel" show="true" type="button" update-mode="true"></wm-form-action>
-                                <wm-form-action key="save" class="form-save btn-success" iconclass="wi wi-save" display-name="Save" show="true" type="submit" update-mode="true"></wm-form-action>
                             </wm-liveform>
                         </wm-livegrid>
                     </wm-gridcolumn>
